[gd_scene load_steps=5 format=2]

[ext_resource path="res://Pokemon.gd" type="Script" id=1]
[ext_resource path="res://substitute_doll.png" type="Texture" id=2]
[ext_resource path="res://health_bar.png" type="Texture" id=3]
[ext_resource path="res://current_health.png" type="Texture" id=4]

[node name="Pokemon" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -1 )
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )
vframes = 2

[node name="InfoBar" type="Node2D" parent="."]
position = Vector2( -220, -30 )

[node name="base" type="Sprite" parent="InfoBar"]
texture = ExtResource( 3 )
offset = Vector2( 64, 0 )

[node name="current_health" type="Sprite" parent="InfoBar"]
texture = ExtResource( 4 )
offset = Vector2( 64, 0 )
vframes = 3

[node name="health_label" type="Label" parent="InfoBar"]
margin_left = -90.0
margin_top = -10.0
margin_right = -50.0
margin_bottom = 10.0
text = "0/0"
align = 1

[node name="name_label" type="Label" parent="InfoBar"]
margin_left = -80.0
margin_top = -30.0
margin_right = 40.0
margin_bottom = -16.0
text = "MISSINGNO"

[node name="level_label" type="Label" parent="InfoBar"]
margin_left = 40.0
margin_top = -30.0
margin_right = 80.0
margin_bottom = -16.0
text = "Lvl: 0"

[node name="status_label" type="Label" parent="InfoBar"]
margin_left = 90.0
margin_top = -30.0
margin_right = 130.0
margin_bottom = -16.0
text = "Status"
